<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:layout_marginTop="@dimen/list_item_vertical_margin"
    android:layout_marginLeft="@dimen/list_item_horizontal_margin"
    android:layout_marginRight="@dimen/list_item_horizontal_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/repo_list_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/elements_margin">

            <ImageView
                android:id="@+id/repo_avatar_image_view"
                android:layout_width="@dimen/list_item_avatar_dimensions"
                android:layout_height="@dimen/list_item_avatar_dimensions"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:layout_toRightOf="@+id/repo_avatar_image_view">

                <TextView
                    android:id="@+id/list_item_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/list_item_title_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/watchers"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/list_item_watchers_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/elements_margin"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/size"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/list_item_size_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/elements_margin"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:text="@string/score"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/list_item_score_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/elements_margin"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>